<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/titleTextView"
        android:textStyle="bold"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/inputPromptTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inputPrompt"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/titleTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:id="@+id/inputLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/inputPromptTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/inputUnitET"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:gravity="end"
            android:inputType="number|numberDecimal"
            android:textSize="20sp"
            />

        <Spinner
            android:id="@+id/inputSpinner"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            />

    </LinearLayout>

    <View
        android:id="@+id/divider1"
        android:layout_width="350dp"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/inputLL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <RelativeLayout
        android:id="@+id/outputSettingsRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/divider1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/unitToConvertToET"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:text="@string/unitToConvertTo"
            android:layout_marginEnd="70dp"
            android:gravity="center"
            />

        <Spinner
            android:id="@+id/settingsSpinner"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_toRightOf="@+id/unitToConvertToET"
            />
    </RelativeLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="350dp"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/outputSettingsRL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/convertBtn"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:text="@string/convertBtn"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <View
        android:id="@+id/divider3"
        android:layout_width="350dp"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/convertBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <TextView
        android:id="@+id/outputTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:hint="@string/resultHint"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/divider3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

<!--    <Button-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="60dp"-->
<!--        android:text="@string/copyToClipboard"-->
<!--        android:layout_marginTop="30dp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/outputTV"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>